version02/QUICK_START.md
# 🎯 Quick Start Guide - Which Scraper Should I Use?

## TL;DR - Quick Decision

**Want complete candidate data?** → Use `dr_candidate_scraper_enhanced.ipynb` ⭐

**Just need priorities?** → Use `dr_candidate_scraper.ipynb`

**Don't want to install Selenium?** → Use `dr_candidate_scraper_simple.ipynb`

---

## 📊 Feature Comparison Table

| What You Get | Simple | Basic | Enhanced ⭐ |
|--------------|:------:|:-----:|:-----------:|
| **Installation Ease** | ⭐⭐⭐ | ⭐⭐ | ⭐⭐ |
| **Speed** | ⭐⭐⭐ | ⭐⭐ | ⭐⭐ |
| **Data Completeness** | ⭐ | ⭐⭐ | ⭐⭐⭐ |
| | | | |
| Name, Party, Municipality | ✅ | ✅ | ✅ |
| Candidate ID | ✅ | ✅ | ✅ |
| Policy Priorities (Mærkesager) | ✅ | ✅ | ✅ |
| **Uddannelse (Education)** | ❌ | ❌ | ✅ |
| **Bopæl (Residence)** | ❌ | ❌ | ✅ |
| **Alder (Age)** | ❌ | ❌ | ✅ |
| **Erhverv (Occupation)** | ❌ | ❌ | ✅ |
| **Social Media Links** | ❌ | ❌ | ✅ |
| **19 Test Answers (Svars)** | ❌ | ❌ | ✅ |
| | | | |
| Works with JavaScript content | ❌ | ✅ | ✅ |
| Requires Selenium | ❌ | ✅ | ✅ |
| Requires Chrome browser | ❌ | ✅ | ✅ |

---

## 🎯 Choose Your Scraper

### Use Case 1: Quick Analysis of Policy Positions
**Need:** Just want to analyze what candidates are prioritizing  
**Use:** `dr_candidate_scraper.ipynb` (Basic)  
**Outputs:** Name, party, priorities  
**Time:** ~10 seconds per candidate

### Use Case 2: Complete Candidate Database
**Need:** Building comprehensive database with demographics  
**Use:** `dr_candidate_scraper_enhanced.ipynb` (Enhanced) ⭐  
**Outputs:** Everything + education, residence, age, occupation, test answers  
**Time:** ~15 seconds per candidate

### Use Case 3: Testing/Prototyping Without Selenium
**Need:** Just want to test if scraping works  
**Use:** `dr_candidate_scraper_simple.ipynb` (Simple)  
**Outputs:** Name, party, priorities (if available)  
**Time:** ~5 seconds per candidate  
**Note:** May not work if content is loaded via JavaScript

---

## 📦 Installation Requirements

### Simple Version
```bash
pip install requests beautifulsoup4 pandas lxml
```
✅ No browser required  
✅ Lightweight  
⚠️ May miss dynamic content

### Basic Version
```bash
pip install selenium webdriver-manager beautifulsoup4 pandas lxml
```
✅ Chrome browser needed  
✅ Handles dynamic content  
✅ Gets priorities reliably

### Enhanced Version (Recommended)
```bash
pip install selenium webdriver-manager beautifulsoup4 pandas lxml
```
✅ Chrome browser needed  
✅ Handles dynamic content  
✅ Extracts ALL available data  
✅ Multiple output formats

---

## 🚀 Quick Start Examples

### Enhanced Version (Recommended)

```python
# 1. Import and setup
from selenium import webdriver
# ... (see notebook for full imports)

driver = setup_driver(headless=True)

# 2. Test single candidate
test_url = "https://www.dr.dk/nyheder/politik/kommunalvalg/din-stemmeseddel/kandidater/kommune/7250-pernille-rosenkrantz-theil"
candidate = scrape_candidate_enhanced(test_url, driver)

# 3. View results
print(f"Name: {candidate['name']}")
print(f"Education: {candidate['uddannelse']}")
print(f"Residence: {candidate['bopael']}")
print(f"Priorities: {candidate['num_priorities']}")
print(f"Test answers: {candidate['num_test_answers']}")

# 4. Scrape full municipality
municipality_url = "https://www.dr.dk/nyheder/politik/kommunalvalg/din-stemmeseddel/124"
candidates = scrape_municipality_enhanced(municipality_url, max_candidates=5)

# 5. Export to CSV
df = pd.DataFrame(candidates)
df.to_csv('my_candidates.csv', index=False, encoding='utf-8')

# 6. Close when done
driver.quit()
```

### Basic Version

```python
# Similar to enhanced, but gets less data
candidates = scrape_municipality(municipality_url, max_candidates=5)
# Gets: name, party, municipality, priorities only
```

### Simple Version

```python
# No Selenium needed
import requests
from bs4 import BeautifulSoup

candidates = scrape_municipality_simple(municipality_url, max_candidates=5)
# May not work if content is loaded via JavaScript
```

---

## 📁 Output Files Comparison

### Simple Version Outputs:
```
candidates_simple.csv          - Basic info
priorities_simple.csv          - Priorities only
```

### Basic Version Outputs:
```
candidates_basic.csv           - Basic info
candidates_priorities.csv      - Priorities (long format)
candidates_raw.json           - Complete raw data
```

### Enhanced Version Outputs ⭐:
```
candidates_main.csv           - Complete info (including Om section)
candidates_svars.csv          - 19 test answers (wide format)
candidates_svars_long.csv     - Test answers (long format)
candidates_priorities.csv     - Priorities
candidates_complete.json      - Complete raw data
scrape_summary.json          - Statistics and metadata
```

---

## ⚡ Performance Comparison

Based on scraping **100 candidates**:

| Version | Time | Data Fields | File Size |
|---------|------|-------------|-----------|
| Simple | ~8 min | 8 fields | 50 KB |
| Basic | ~15 min | 9 fields | 75 KB |
| Enhanced | ~20 min | 28+ fields | 500 KB |

*Times are approximate and depend on internet speed and server response*

---

## 🎓 Learning Path

### Beginner
1. Start with **Simple version** to understand the basics
2. Test with 3-5 candidates
3. Review output CSV files

### Intermediate  
1. Move to **Basic version** for reliable data
2. Install Selenium (follow macOS_Selenium_Installation_Guide.md)
3. Scrape a full municipality

### Advanced
1. Use **Enhanced version** for comprehensive analysis
2. Customize selectors for additional fields
3. Scrape multiple municipalities
4. Perform data analysis with pandas

---

## 🐛 Troubleshooting Decision Tree

```
Can't install Selenium?
└── Use Simple version
    └── Getting empty data?
        └── Content is dynamic, must use Selenium

Selenium installed?
└── Need education/residence/test answers?
    ├── YES → Use Enhanced version
    └── NO → Use Basic version

Enhanced version not finding test answers?
└── Test answers may need custom selectors
    └── Check README_ENHANCED.md for customization guide
```

---

## 📊 Data Quality by Version

### What % of fields are populated? (typical results)

**Simple Version:**
- Name: 100%
- Party: 100%
- Priorities: 80% (may miss JavaScript-loaded content)
- Education: 0% (not extracted)
- Test answers: 0% (not extracted)

**Basic Version:**
- Name: 100%
- Party: 100%
- Priorities: 95%
- Education: 0% (not extracted)
- Test answers: 0% (not extracted)

**Enhanced Version:**
- Name: 100%
- Party: 100%
- Priorities: 95%
- Education: 90%
- Residence: 85%
- Test answers: Varies* (0-100% depending on page structure)

*Note: Test answers may require selector customization based on current DR website structure*

---

## 🎯 Recommendation Summary

### For Research/Academic Analysis
✅ **Use Enhanced Version**  
You need complete demographic and political position data.

### For Quick Policy Analysis
✅ **Use Basic Version**  
You just want to compare candidate priorities across parties.

### For Testing/Learning
✅ **Use Simple Version**  
You want to understand web scraping without Selenium complexity.

---

## 🔄 Migration Path

Already using an older version? Here's how to upgrade:

```python
# From Simple → Basic
# Just install Selenium and switch notebooks
# Your data extraction logic is similar

# From Basic → Enhanced  
# Same setup, just use enhanced functions
# All basic functionality is preserved
# Plus you get: Om section + test answers

# Example: Adding enhanced scraping to existing code
# OLD (basic):
candidate = scrape_candidate_data(url, driver)

# NEW (enhanced):
candidate = scrape_candidate_enhanced(url, driver)
# Same fields + uddannelse, bopael, alder, erhverv, svars
```

---

## 📚 Documentation Files

- **README.md** - Original basic scraper documentation
- **README_ENHANCED.md** - Complete enhanced version guide ⭐
- **macOS_Selenium_Installation_Guide.md** - Installation help for macOS
- **This file (QUICK_START.md)** - Version comparison

---

## ✅ Final Checklist

Before you start:

- [ ] Read the appropriate README for your chosen version
- [ ] Install required dependencies (`pip install ...`)
- [ ] If using Selenium: Install Chrome browser
- [ ] Test with 1-3 candidates first
- [ ] Check data quality report
- [ ] Scale up gradually

---

## 🎁 Bonus Tips

1. **Save your work frequently** - Export after each municipality
2. **Use version control** - Git commit your notebooks
3. **Document your changes** - Add comments when customizing
4. **Check for updates** - DR may change their HTML structure
5. **Share your findings** - Contribute back if you improve selectors!

---

## 🆘 Need Help?

1. Check the specific README for your version
2. Review the inline code comments in notebooks
3. Test with verbose output enabled
4. Start with a single candidate URL to debug

---

*Happy scraping! 🎉*

Choose the version that fits your needs and start building your candidate database!
